--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
   - "2.7"
 # command to install dependencies
 install:
-	python setup.py develop
+  - python setup.py develop
 # command to run tests
 script:
-	py.test test_broadcast.py 
+  - py.test  
